--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/ico.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CyberNexus</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;700&family=Inter:wght@400;500;600;700&family=Noto+Sans:wght@700&family=Noto+Sans+SC:wght@700&family=Noto+Sans+TC:wght@700&family=Rajdhani:wght@600;700&display=swap"
-    rel="stylesheet">
+  <!-- Fonts loaded locally from /fonts/ -->
 </head>
 
 <body>
